// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendMessageDialog renders hidden when open is false 1`] = `<div />`;

exports[`SendMessageDialog renders with all parameters 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root MuiModal-root css-zw3mfo-MuiModal-root-MuiDialog-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiModal-backdrop css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container MuiDialog-scrollPaper css-1cvd0nv-MuiDialog-container"
      role="presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-labelledby=":r8:"
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthLg MuiDialog-paperFullWidth css-1m9slkl-MuiPaper-root-MuiDialog-paper"
        role="dialog"
        style="--Paper-shadow: 0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12);"
      >
        <h2
          class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-1tsrfuq-MuiTypography-root-MuiDialogTitle-root"
          id=":r8:"
        >
          Viestin lähettäminen
        </h2>
        <div
          class="MuiDialogContent-root css-1kxd7on-MuiDialogContent-root"
        >
          <div
            class="MuiStack-root css-1o3p0tj-MuiStack-root"
          >
            <div
              class="MuiBox-root css-126n10b"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAccordion-root css-4zytwg-MuiPaper-root-MuiAccordion-root"
                style="--Paper-shadow: none;"
              >
                <h3
                  class="MuiAccordion-heading css-rolk5j-MuiAccordion-heading"
                >
                  <div
                    aria-expanded="false"
                    class="MuiButtonBase-root MuiAccordionSummary-root css-gqfqa5-MuiButtonBase-root-MuiAccordionSummary-root"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="MuiAccordionSummary-content css-1betqn-MuiAccordionSummary-content"
                    >
                      Vastaanottajat: 
                      2
                    </div>
                    <div
                      class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-16x0dk6-MuiSvgIcon-root"
                        data-testid="ArrowForwardIosSharpIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M6.23 20.23 8 22l10-10L8 2 6.23 3.77 14.46 12z"
                        />
                      </svg>
                    </div>
                  </div>
                </h3>
                <div
                  class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-1ev76c2-MuiCollapse-root"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                    >
                      <div
                        class="MuiAccordion-region"
                        role="region"
                      >
                        <div
                          class="MuiAccordionDetails-root css-wzvdhu-MuiAccordionDetails-root"
                        >
                          <ul
                            class="MuiList-root MuiList-padding MuiList-dense css-127wja6-MuiList-root"
                          >
                            <li
                              class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-8an3zm-MuiListItem-root"
                            >
                              <div
                                class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-b8n15h-MuiListItemText-root"
                              >
                                <span
                                  class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-1nmqws6-MuiTypography-root"
                                >
                                  Dog Name 10
                                </span>
                                <p
                                  class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-ihhumc-MuiTypography-root"
                                >
                                  owner@example.com, handler@example.com
                                </p>
                              </div>
                            </li>
                            <li
                              class="MuiListItem-root MuiListItem-dense MuiListItem-gutters MuiListItem-padding css-8an3zm-MuiListItem-root"
                            >
                              <div
                                class="MuiListItemText-root MuiListItemText-dense MuiListItemText-multiline css-b8n15h-MuiListItemText-root"
                              >
                                <span
                                  class="MuiTypography-root MuiTypography-body2 MuiListItemText-primary css-1nmqws6-MuiTypography-root"
                                >
                                  Dog Name 20
                                </span>
                                <p
                                  class="MuiTypography-root MuiTypography-body2 MuiListItemText-secondary css-ihhumc-MuiTypography-root"
                                >
                                  owner@example.com, handler@example.com
                                </p>
                              </div>
                            </li>
                          </ul>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1mju1gc-MuiTypography-root"
              >
                Viesti
              </h6>
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-nyqcqa-MuiPaper-root"
                style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
              >
                <div
                  class="MuiAutocomplete-root MuiAutocomplete-fullWidth MuiAutocomplete-hasPopupIcon css-fzem9i-MuiAutocomplete-root"
                  data-testid="Viestin tyyppi"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-y4n9bg-MuiFormControl-root-MuiTextField-root"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-disabled MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-sizeMedium MuiInputLabel-outlined css-191hsvz-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="true"
                      for=":r9:"
                      id=":r9:-label"
                    >
                      Viestin tyyppi
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-disabled MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-3pe1ax-MuiInputBase-root-MuiOutlinedInput-root"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-expanded="false"
                        aria-invalid="false"
                        autocapitalize="none"
                        autocomplete="off"
                        class="MuiInputBase-input MuiOutlinedInput-input Mui-disabled MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-lc42l8-MuiInputBase-input-MuiOutlinedInput-input"
                        disabled=""
                        id=":r9:"
                        role="combobox"
                        spellcheck="false"
                        type="text"
                        value="emailTemplate.registration"
                      />
                      <div
                        class="MuiAutocomplete-endAdornment css-p1olib-MuiAutocomplete-endAdornment"
                      >
                        <button
                          aria-label="Open"
                          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-2anpn7-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator"
                          disabled=""
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
                            data-testid="ArrowDropDownIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7 10l5 5 5-5z"
                            />
                          </svg>
                        </button>
                      </div>
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-kg5swy"
                        >
                          <span>
                            Viestin tyyppi
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <fieldset
                  class="MuiFormControl-root MuiFormControl-fullWidth css-1b5lkxe-MuiFormControl-root"
                >
                  <legend
                    class="MuiFormLabel-root MuiFormLabel-colorPrimary css-5u6vn8-MuiFormLabel-root"
                  >
                    Voit lisätä tähän halutessasi lisäviestin:
                  </legend>
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-y4n9bg-MuiFormControl-root-MuiTextField-root"
                  >
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-12qosy6-MuiInputBase-root-MuiOutlinedInput-root"
                    >
                      <textarea
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-1eiam5b-MuiInputBase-input-MuiOutlinedInput-input"
                        id=":rb:"
                        rows="4"
                        style="height: 0px; overflow: hidden;"
                      />
                      <textarea
                        aria-hidden="true"
                        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-1eiam5b-MuiInputBase-input-MuiOutlinedInput-input"
                        readonly=""
                        style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
                        tabindex="-1"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-gpjuor"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </fieldset>
                <fieldset
                  class="MuiFormControl-root css-mo77jt-MuiFormControl-root"
                >
                  <legend
                    class="MuiFormLabel-root MuiFormLabel-colorPrimary css-5u6vn8-MuiFormLabel-root"
                  >
                    Yhteystiedot:
                  </legend>
                  <div
                    class="MuiFormGroup-root css-182q4zi-MuiFormGroup-root"
                  >
                    <div>
                      <legend
                        class="MuiFormLabel-root MuiFormLabel-colorPrimary css-5u6vn8-MuiFormLabel-root"
                      >
                        event.secretary
                      </legend>
                      <div
                        class="MuiFormGroup-root MuiFormGroup-row css-1a7rtj9-MuiFormGroup-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-doydwk-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              name="secretary.name"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
                              data-testid="CheckBoxIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1edfpdg-MuiTypography-root"
                          >
                            contact.name
                          </span>
                        </label>
                        <label
                          class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="true"
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-disabled PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked Mui-disabled MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-doydwk-MuiButtonBase-root-MuiCheckbox-root"
                            tabindex="-1"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              disabled=""
                              name="secretary.email"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
                              data-testid="CheckBoxIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label Mui-disabled css-1edfpdg-MuiTypography-root"
                          >
                            contact.email
                          </span>
                        </label>
                        <label
                          class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="true"
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-disabled PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked Mui-disabled MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-doydwk-MuiButtonBase-root-MuiCheckbox-root"
                            tabindex="-1"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              disabled=""
                              name="secretary.phone"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
                              data-testid="CheckBoxIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label Mui-disabled css-1edfpdg-MuiTypography-root"
                          >
                            contact.phone
                          </span>
                        </label>
                      </div>
                    </div>
                    <div>
                      <legend
                        class="MuiFormLabel-root MuiFormLabel-colorPrimary css-5u6vn8-MuiFormLabel-root"
                      >
                        event.official
                      </legend>
                      <div
                        class="MuiFormGroup-root MuiFormGroup-row css-1a7rtj9-MuiFormGroup-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-doydwk-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              name="official.name"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
                              data-testid="CheckBoxIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1edfpdg-MuiTypography-root"
                          >
                            contact.name
                          </span>
                        </label>
                        <label
                          class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="true"
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-disabled PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked Mui-disabled MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-doydwk-MuiButtonBase-root-MuiCheckbox-root"
                            tabindex="-1"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              disabled=""
                              name="official.email"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
                              data-testid="CheckBoxIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label Mui-disabled css-1edfpdg-MuiTypography-root"
                          >
                            contact.email
                          </span>
                        </label>
                        <label
                          class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="true"
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-disabled PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked Mui-disabled MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-doydwk-MuiButtonBase-root-MuiCheckbox-root"
                            tabindex="-1"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              disabled=""
                              name="official.phone"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
                              data-testid="CheckBoxIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label Mui-disabled css-1edfpdg-MuiTypography-root"
                          >
                            contact.phone
                          </span>
                        </label>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
            </div>
            <div
              class="MuiBox-root css-a6rva7"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1mju1gc-MuiTypography-root"
              >
                Esikatselu
              </h6>
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1fog20v-MuiPaper-root"
                style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
              >
                Aihe: 
                registration.email.subject context, defaultValue: NOU dateFormat.datespan start, end test location
                <div
                  class="preview"
                >
                  <h1>
                    registration.email.title context, defaultValue
                  </h1>
                  

                  <p>
                    <br />
                    

                    <a
                      href="/r/test1/nou-registration/edit"
                    >
                      Muokkaa ilmoittautumisen tietoja
                    </a>
                    <br />
                    

                    <a
                      href="/r/test1/nou-registration/cancel"
                    >
                      Peru ilmoittautuminen
                    </a>
                    <br />
                    

                  </p>
                  

                  <table>
                    

                    <tbody>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Koe                
                        </th>
                        

                        <td>
                          NOU dateFormat.datespan start, end test location (test)
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        />
                        

                        <td />
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Koira              
                        </th>
                        

                        <td>
                          TESTDOG-0010 Dog Name 10
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Tunnistusmerkintä  
                        </th>
                        

                        <td>
                          1234567890123456
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Rotu               
                        </th>
                        

                        <td>
                          110 ns
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Omistaja           
                        </th>
                        

                        <td>
                          Owner Name
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Kotipaikka         
                        </th>
                        

                        <td>
                          Owner Location
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Sähköposti         
                        </th>
                        

                        <td>
                          owner@example.com
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Ohjaaja            
                        </th>
                        

                        <td>
                          Handler Name
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Kotipaikka         
                        </th>
                        

                        <td>
                          Handler Location
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Sähköposti         
                        </th>
                        

                        <td>
                          handler@example.com
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Puhelin            
                        </th>
                        

                        <td>
                          +3584054321
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Toivottu ajankohta 
                        </th>
                        

                        <td>
                          dd.MM. registration.time.ap
                        </td>
                        

                      </tr>
                      

                      <tr>
                        

                        <th
                          align="left"
                        >
                          Varasija           
                        </th>
                        

                        <td>
                          registration.reserveChoises.ANY
                        </td>
                        

                      </tr>
                      

                    </tbody>
                    

                  </table>
                  

                  <p>
                    <strong>
                      Koeluokkaan oikeuttavat tulokset
                    </strong>
                    <br />
                    

                    <br />
                    

                  </p>
                  

                  <p>
                    <strong>
                      Lisätietoja
                    </strong>
                    <br />
                    
additional notes
                    <br />
                    

                  </p>
                  

                  <p>
                    Voit tarkastella ilmoittautumisesi tietoja täällä: 
                    <a
                      href="/r/test1/nou-registration"
                    >
                      Katso ilmoittautumisen tiedot
                    </a>
                  </p>
                  

                  <p>
                    Ystävällisin terveisin,
                    <br />
                    

                    <br />
                    
Siiri Sihteeri
                    <br />
                    
Koesihteeri
                    <br />
                    

                    <br />
                    

                    <br />
                    

                    <br />
                    

                    <br />
                    

                    <br />
                    
p. 
                    <br />
                    

                  </p>
                  

                  <p>
                    <br />
                    
Teemu Toimitsija
                    <br />
                    
Vastaava koetoimitsija
                    <br />
                    

                    <br />
                    

                    <br />
                    

                    <br />
                    

                    <br />
                    

                  </p>
                  

                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiDialogActions-root MuiDialogActions-spacing css-19kok5i-MuiDialogActions-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-nlyz4j-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Lähetä
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1gp3wsk-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            cancel
          </button>
        </div>
      </div>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`SendMessageDialog renders with minimal parameters 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  />
  <div
    class="MuiDialog-root MuiModal-root css-zw3mfo-MuiModal-root-MuiDialog-root"
    role="presentation"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root MuiModal-backdrop css-yiavyu-MuiBackdrop-root-MuiDialog-backdrop"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-testid="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container MuiDialog-scrollPaper css-1cvd0nv-MuiDialog-container"
      role="presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-labelledby=":r3:"
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthLg MuiDialog-paperFullWidth css-1m9slkl-MuiPaper-root-MuiDialog-paper"
        role="dialog"
        style="--Paper-shadow: 0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12);"
      >
        <h2
          class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-1tsrfuq-MuiTypography-root-MuiDialogTitle-root"
          id=":r3:"
        >
          Viestin lähettäminen
        </h2>
        <div
          class="MuiDialogContent-root css-1kxd7on-MuiDialogContent-root"
        >
          <div
            class="MuiStack-root css-1o3p0tj-MuiStack-root"
          >
            <div
              class="MuiBox-root css-126n10b"
            >
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAccordion-root css-4zytwg-MuiPaper-root-MuiAccordion-root"
                style="--Paper-shadow: none;"
              >
                <h3
                  class="MuiAccordion-heading css-rolk5j-MuiAccordion-heading"
                >
                  <div
                    aria-expanded="false"
                    class="MuiButtonBase-root MuiAccordionSummary-root css-gqfqa5-MuiButtonBase-root-MuiAccordionSummary-root"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="MuiAccordionSummary-content css-1betqn-MuiAccordionSummary-content"
                    >
                      Vastaanottajat: 
                      0
                    </div>
                    <div
                      class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-16x0dk6-MuiSvgIcon-root"
                        data-testid="ArrowForwardIosSharpIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M6.23 20.23 8 22l10-10L8 2 6.23 3.77 14.46 12z"
                        />
                      </svg>
                    </div>
                  </div>
                </h3>
                <div
                  class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-1ev76c2-MuiCollapse-root"
                  style="min-height: 0px;"
                >
                  <div
                    class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
                    >
                      <div
                        class="MuiAccordion-region"
                        role="region"
                      >
                        <div
                          class="MuiAccordionDetails-root css-wzvdhu-MuiAccordionDetails-root"
                        >
                          <ul
                            class="MuiList-root MuiList-padding MuiList-dense css-127wja6-MuiList-root"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1mju1gc-MuiTypography-root"
              >
                Viesti
              </h6>
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-nyqcqa-MuiPaper-root"
                style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
              >
                <div
                  class="MuiAutocomplete-root MuiAutocomplete-fullWidth MuiAutocomplete-hasPopupIcon css-fzem9i-MuiAutocomplete-root"
                  data-testid="Viestin tyyppi"
                >
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-y4n9bg-MuiFormControl-root-MuiTextField-root"
                  >
                    <label
                      class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeMedium MuiInputLabel-outlined css-1weq444-MuiFormLabel-root-MuiInputLabel-root"
                      data-shrink="false"
                      for=":r4:"
                      id=":r4:-label"
                    >
                      Viestin tyyppi
                    </label>
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-adornedEnd MuiAutocomplete-inputRoot css-3pe1ax-MuiInputBase-root-MuiOutlinedInput-root"
                    >
                      <input
                        aria-autocomplete="list"
                        aria-expanded="false"
                        aria-invalid="false"
                        autocapitalize="none"
                        autocomplete="off"
                        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiAutocomplete-input MuiAutocomplete-inputFocused css-lc42l8-MuiInputBase-input-MuiOutlinedInput-input"
                        id=":r4:"
                        role="combobox"
                        spellcheck="false"
                        type="text"
                        value=""
                      />
                      <div
                        class="MuiAutocomplete-endAdornment css-p1olib-MuiAutocomplete-endAdornment"
                      >
                        <button
                          aria-label="Open"
                          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium MuiAutocomplete-popupIndicator css-2anpn7-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator"
                          tabindex="-1"
                          title="Open"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
                            data-testid="ArrowDropDownIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7 10l5 5 5-5z"
                            />
                          </svg>
                        </button>
                      </div>
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-1pbc52w"
                        >
                          <span>
                            Viestin tyyppi
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </div>
                <fieldset
                  class="MuiFormControl-root MuiFormControl-fullWidth css-1b5lkxe-MuiFormControl-root"
                >
                  <legend
                    class="MuiFormLabel-root MuiFormLabel-colorPrimary css-5u6vn8-MuiFormLabel-root"
                  >
                    Voit lisätä tähän halutessasi lisäviestin:
                  </legend>
                  <div
                    class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-y4n9bg-MuiFormControl-root-MuiTextField-root"
                  >
                    <div
                      class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-multiline css-12qosy6-MuiInputBase-root-MuiOutlinedInput-root"
                    >
                      <textarea
                        aria-invalid="false"
                        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-1eiam5b-MuiInputBase-input-MuiOutlinedInput-input"
                        id=":r6:"
                        rows="4"
                        style="height: 0px; overflow: hidden;"
                      />
                      <textarea
                        aria-hidden="true"
                        class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMultiline css-1eiam5b-MuiInputBase-input-MuiOutlinedInput-input"
                        readonly=""
                        style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
                        tabindex="-1"
                      />
                      <fieldset
                        aria-hidden="true"
                        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
                      >
                        <legend
                          class="css-gpjuor"
                        >
                          <span
                            class="notranslate"
                          >
                            ​
                          </span>
                        </legend>
                      </fieldset>
                    </div>
                  </div>
                </fieldset>
                <fieldset
                  class="MuiFormControl-root css-mo77jt-MuiFormControl-root"
                >
                  <legend
                    class="MuiFormLabel-root MuiFormLabel-colorPrimary css-5u6vn8-MuiFormLabel-root"
                  >
                    Yhteystiedot:
                  </legend>
                  <div
                    class="MuiFormGroup-root css-182q4zi-MuiFormGroup-root"
                  >
                    <div>
                      <legend
                        class="MuiFormLabel-root MuiFormLabel-colorPrimary css-5u6vn8-MuiFormLabel-root"
                      >
                        event.secretary
                      </legend>
                      <div
                        class="MuiFormGroup-root MuiFormGroup-row css-1a7rtj9-MuiFormGroup-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-doydwk-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              name="secretary.name"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
                              data-testid="CheckBoxIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1edfpdg-MuiTypography-root"
                          >
                            contact.name
                          </span>
                        </label>
                        <label
                          class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="true"
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-disabled PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked Mui-disabled MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-doydwk-MuiButtonBase-root-MuiCheckbox-root"
                            tabindex="-1"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              disabled=""
                              name="secretary.email"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
                              data-testid="CheckBoxIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label Mui-disabled css-1edfpdg-MuiTypography-root"
                          >
                            contact.email
                          </span>
                        </label>
                        <label
                          class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="true"
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-disabled PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked Mui-disabled MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-doydwk-MuiButtonBase-root-MuiCheckbox-root"
                            tabindex="-1"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              disabled=""
                              name="secretary.phone"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
                              data-testid="CheckBoxIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label Mui-disabled css-1edfpdg-MuiTypography-root"
                          >
                            contact.phone
                          </span>
                        </label>
                      </div>
                    </div>
                    <div>
                      <legend
                        class="MuiFormLabel-root MuiFormLabel-colorPrimary css-5u6vn8-MuiFormLabel-root"
                      >
                        event.official
                      </legend>
                      <div
                        class="MuiFormGroup-root MuiFormGroup-row css-1a7rtj9-MuiFormGroup-root"
                      >
                        <label
                          class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                        >
                          <span
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-doydwk-MuiButtonBase-root-MuiCheckbox-root"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              name="official.name"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
                              data-testid="CheckBoxIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label css-1edfpdg-MuiTypography-root"
                          >
                            contact.name
                          </span>
                        </label>
                        <label
                          class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="true"
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-disabled PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked Mui-disabled MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-doydwk-MuiButtonBase-root-MuiCheckbox-root"
                            tabindex="-1"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              disabled=""
                              name="official.email"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
                              data-testid="CheckBoxIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label Mui-disabled css-1edfpdg-MuiTypography-root"
                          >
                            contact.email
                          </span>
                        </label>
                        <label
                          class="MuiFormControlLabel-root Mui-disabled MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
                        >
                          <span
                            aria-disabled="true"
                            class="MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-disabled PrivateSwitchBase-root MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium Mui-checked Mui-disabled MuiCheckbox-root MuiCheckbox-colorPrimary MuiCheckbox-sizeMedium css-doydwk-MuiButtonBase-root-MuiCheckbox-root"
                            tabindex="-1"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input css-1m9pwf3"
                              data-indeterminate="false"
                              disabled=""
                              name="official.phone"
                              type="checkbox"
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-20bmp1-MuiSvgIcon-root"
                              data-testid="CheckBoxIcon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTypography-root MuiTypography-body1 MuiFormControlLabel-label Mui-disabled css-1edfpdg-MuiTypography-root"
                          >
                            contact.phone
                          </span>
                        </label>
                      </div>
                    </div>
                  </div>
                </fieldset>
              </div>
            </div>
            <div
              class="MuiBox-root css-a6rva7"
            >
              <h6
                class="MuiTypography-root MuiTypography-h6 css-1mju1gc-MuiTypography-root"
              >
                Esikatselu
              </h6>
              <div
                class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-1fog20v-MuiPaper-root"
                style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
              >
                Aihe: 
                <div
                  class="preview"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiDialogActions-root MuiDialogActions-spacing css-19kok5i-MuiDialogActions-root"
        >
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary Mui-disabled MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary css-nlyz4j-MuiButtonBase-root-MuiButton-root"
            disabled=""
            tabindex="-1"
            type="button"
          >
            Lähetä
          </button>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-1gp3wsk-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            cancel
          </button>
        </div>
      </div>
    </div>
    <div
      data-testid="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
